atualização do css

--- a/estilo/style.css
+++ b/estilo/style.css
@@ -36,7 +36,7 @@ header > h1 {
     padding-top: 50px; /*espaço acima da linha*/
     font-variant: small-caps;
     font-family: var(--fonte2);
-    font-size: 4em;
+    font-size: 10vw; /*aumentar ou diminuir o tamanho da letra de acordo com o tamanho da janela do navegador*/
 }
 
 header > p { 
@@ -65,7 +65,11 @@ section {
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--fonte3);
-    font-size: 2em;
+    font-size: 3.5vw; /*aumentar ou diminuir o tamanho da letra de acordo com o tamanho da janela do navegador*/
+}
+
+section > p {
+    padding-bottom: 2em;
 }
 
 section.normal {
@@ -76,11 +80,26 @@ section.normal {
 section.imagem {
     background-color: rgb(66, 64, 64);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.494);
+    background-attachment: fixed;
 }
 
 section.imagem p {
-    width: 400px;
-    background-color: rgba(0, 0, 0, 0.301);
+    display: inline-block; /*se adapta ao tamano do conteúdo*/
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.533);
+    text-shadow: 1px 1px opx black;
+}
+
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    background-size: cover;
+}
+
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
+    background-size: cover;
 }
 
 footer {
